--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <title>Giphy Party!</title>
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <title>Giphy Party!</title>
+  </head>
 
-<body>
+  <body>
+    <form action="" method="post" class="form">
+      <div class="form">
+        <input type="text" name="search" id="search" required>
+      </div>
+      <div class="form">
+        <input type="submit" value="submit">
+      </div>
+    </form>
 
-<script src="https://unpkg.com/jquery"></script>
-<script src="https://unpkg.com/axios/dist/axios.js"></script>
-<script src="app.js"></script>
-</body>
+    <div class="giphy-container"></div>
+
+    <script src="https://unpkg.com/jquery"></script>
+    <script src="https://unpkg.com/axios/dist/axios.js"></script>
+    <script src="app.js"></script>
+  </body>
 
 </html>
