--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Giphy Party!</title>
   </head>
 
   <body>
     <form action="" method="post" class="form">
       <div class="form">
-        <input type="text" name="search" id="search" required>
+        <input type="text" name="search" id="search" required />
       </div>
       <div class="form">
-        <input type="submit" value="submit">
+        <input type="submit" value="submit" />
       </div>
     </form>
 
@@ -22,5 +21,4 @@
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
     <script src="app.js"></script>
   </body>
-
 </html>
