--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <title>Giphy Party!</title>
   </head>
 
   <body>
-    <form action="" method="post" class="form">
+    <form class="form">
       <div class="form">
         <input type="text" name="search" id="search" required />
       </div>
+
       <div class="form">
-        <input type="submit" value="submit" />
+        <input id="submit" type="submit" value="submit" />
+        <button id="remove" type="button">remove</button>
       </div>
     </form>
 
@@ -21,4 +24,5 @@
     <script src="https://unpkg.com/axios/dist/axios.js"></script>
     <script src="app.js"></script>
   </body>
+
 </html>
